--- a/CornLeavesDiseasesCalssification_2.ipynb
+++ b/CornLeavesDiseasesCalssification_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -48,7 +48,6 @@
     "from keras.utils import plot_model\n",
     "from tensorflow.keras import models, layers\n",
     "from tensorflow.keras.applications import MobileNetV2\n",
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
     "from tensorflow.keras.callbacks import EarlyStopping, ModelCheckpoint, ReduceLROnPlateau\n",
     "import warnings\n",
     "warnings.filterwarnings(\"ignore\")\n",
@@ -125,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 55,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -250,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 57,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -281,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 58,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -312,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 59,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -328,7 +327,7 @@
        "Text(0.5, 1.0, 'Lables Distribution')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -355,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 60,
    "metadata": {
     "id": "M7WDqbAXbH5Y"
    },
@@ -377,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -411,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 63,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -478,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 64,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -522,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 65,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -562,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 66,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -602,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 67,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -642,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 68,
    "metadata": {
     "id": "1GzFC7_O-SvU"
    },
@@ -654,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 69,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -679,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 70,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -726,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 71,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -760,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 72,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -794,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 73,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -833,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 74,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -860,7 +859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 75,
    "metadata": {
     "id": "66ZtZj95xjM1"
    },
@@ -876,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 76,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -889,7 +888,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "input_layer\n",
+      "input_layer_2\n",
       "Conv1\n",
       "bn_Conv1\n",
       "Conv1_relu\n",
@@ -1043,7 +1042,7 @@
       "Conv_1\n",
       "Conv_1_bn\n",
       "out_relu\n",
-      "global_average_pooling2d\n"
+      "global_average_pooling2d_1\n"
      ]
     }
    ],
@@ -1075,7 +1074,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 78,
    "metadata": {
     "id": "S0Lk-qWvxs4v"
    },
@@ -1087,8 +1086,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "model.add(layers.Flatten())"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 98,
    "metadata": {
     "id": "V9NfEkuxzbMs"
    },
@@ -1097,14 +1103,13 @@
     "# Add custom layers on top of the base model\n",
     "model = models.Sequential()\n",
     "model.add(pre_trained_model)\n",
-    "model.add(layers.Flatten())\n",
     "model.add(layers.Dense(4, activation='softmax'))\n",
     "model.build(input_shape=(None, 224, 224, 3))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 100,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1128,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 102,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1141,11 +1146,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential\"</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"font-weight: bold\">Model: \"sequential_2\"</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1mModel: \"sequential\"\u001b[0m\n"
+       "\u001b[1mModel: \"sequential_2\"\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -1160,9 +1165,7 @@
        "│ mobilenetv2_1.00_224            │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1280</span>)           │     <span style=\"color: #00af00; text-decoration-color: #00af00\">2,257,984</span> │\n",
        "│ (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Functional</span>)                    │                        │               │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ flatten (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Flatten</span>)               │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">1280</span>)           │             <span style=\"color: #00af00; text-decoration-color: #00af00\">0</span> │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                   │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">4</span>)              │         <span style=\"color: #00af00; text-decoration-color: #00af00\">5,124</span> │\n",
+       "│ dense_2 (<span style=\"color: #0087ff; text-decoration-color: #0087ff\">Dense</span>)                 │ (<span style=\"color: #00d7ff; text-decoration-color: #00d7ff\">None</span>, <span style=\"color: #00af00; text-decoration-color: #00af00\">4</span>)              │         <span style=\"color: #00af00; text-decoration-color: #00af00\">5,124</span> │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n",
        "</pre>\n"
       ],
@@ -1173,9 +1176,7 @@
        "│ mobilenetv2_1.00_224            │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m1280\u001b[0m)           │     \u001b[38;5;34m2,257,984\u001b[0m │\n",
        "│ (\u001b[38;5;33mFunctional\u001b[0m)                    │                        │               │\n",
        "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ flatten (\u001b[38;5;33mFlatten\u001b[0m)               │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m1280\u001b[0m)           │             \u001b[38;5;34m0\u001b[0m │\n",
-       "├─────────────────────────────────┼────────────────────────┼───────────────┤\n",
-       "│ dense (\u001b[38;5;33mDense\u001b[0m)                   │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m4\u001b[0m)              │         \u001b[38;5;34m5,124\u001b[0m │\n",
+       "│ dense_2 (\u001b[38;5;33mDense\u001b[0m)                 │ (\u001b[38;5;45mNone\u001b[0m, \u001b[38;5;34m4\u001b[0m)              │         \u001b[38;5;34m5,124\u001b[0m │\n",
        "└─────────────────────────────────┴────────────────────────┴───────────────┘\n"
       ]
      },
@@ -1229,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 104,
    "metadata": {
     "id": "Q5U9iNxs1C_g"
    },
@@ -1242,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 106,
    "metadata": {
     "id": "lTwywREQ1etr"
    },
@@ -1250,12 +1251,12 @@
    "source": [
     "checkpoint_cb = ModelCheckpoint('MyModel.keras', save_best_only=True)\n",
     "earlystop_cb = EarlyStopping(patience=10, restore_best_weights=True)\n",
-    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=3, min_lr=1e-6)\n"
+    "reduce_lr = ReduceLROnPlateau(monitor='val_loss', factor=0.5, patience=3, min_lr=1e-6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 108,
    "metadata": {
     "id": "3fCE0tk_201d"
    },
@@ -1267,7 +1268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 110,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1309,55 +1310,38 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m129s\u001b[0m 1s/step - accuracy: 0.6937 - loss: 0.8168 - val_accuracy: 0.8918 - val_loss: 0.3275 - learning_rate: 0.0010\n",
+      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 777ms/step - accuracy: 0.9322 - loss: 0.1913Epoch 1 ended with accuracy: 0.9248899817466736, loss: 0.20081864297389984\n",
+      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m98s\u001b[0m 985ms/step - accuracy: 0.9321 - loss: 0.1914 - val_accuracy: 0.9132 - val_loss: 0.2323 - learning_rate: 0.0010\n",
       "Epoch 2/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.0000e+00 - loss: 0.0000e+00 - learning_rate: 0.0010\n",
+      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 882ms/step - accuracy: 0.9165 - loss: 0.2135Epoch 2 ended with accuracy: 0.9164047837257385, loss: 0.21590356528759003\n",
+      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m88s\u001b[0m 883ms/step - accuracy: 0.9165 - loss: 0.2135 - learning_rate: 0.0010\n",
       "Epoch 3/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m126s\u001b[0m 1s/step - accuracy: 0.8859 - loss: 0.2925 - val_accuracy: 0.9082 - val_loss: 0.2619 - learning_rate: 0.0010\n",
-      "Epoch 4/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.0000e+00 - loss: 0.0000e+00 - learning_rate: 0.0010\n",
-      "Epoch 5/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m129s\u001b[0m 1s/step - accuracy: 0.9040 - loss: 0.2489 - val_accuracy: 0.9006 - val_loss: 0.2512 - learning_rate: 0.0010\n",
-      "Epoch 6/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 902us/step - accuracy: 0.0000e+00 - loss: 0.0000e+00 - learning_rate: 0.0010\n",
-      "Epoch 7/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m127s\u001b[0m 1s/step - accuracy: 0.9094 - loss: 0.2349 - val_accuracy: 0.8956 - val_loss: 0.2645 - learning_rate: 0.0010\n",
-      "Epoch 8/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.0000e+00 - loss: 0.0000e+00 - learning_rate: 0.0010\n",
-      "Epoch 9/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m139s\u001b[0m 1s/step - accuracy: 0.9110 - loss: 0.2243 - val_accuracy: 0.8981 - val_loss: 0.2332 - learning_rate: 0.0010\n",
-      "Epoch 10/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.0000e+00 - loss: 0.0000e+00 - learning_rate: 0.0010\n",
-      "Epoch 11/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m139s\u001b[0m 1s/step - accuracy: 0.9205 - loss: 0.1993 - val_accuracy: 0.9157 - val_loss: 0.2282 - learning_rate: 0.0010\n",
-      "Epoch 12/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.0000e+00 - loss: 0.0000e+00 - learning_rate: 0.0010\n",
-      "Epoch 13/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m126s\u001b[0m 1s/step - accuracy: 0.9260 - loss: 0.1869 - val_accuracy: 0.9182 - val_loss: 0.2141 - learning_rate: 0.0010\n",
-      "Epoch 14/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.0000e+00 - loss: 0.0000e+00 - learning_rate: 0.0010\n",
-      "Epoch 15/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m125s\u001b[0m 1s/step - accuracy: 0.9191 - loss: 0.1953 - val_accuracy: 0.9082 - val_loss: 0.2196 - learning_rate: 0.0010\n",
-      "Epoch 16/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.0000e+00 - loss: 0.0000e+00 - learning_rate: 0.0010\n",
-      "Epoch 17/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m140s\u001b[0m 1s/step - accuracy: 0.9305 - loss: 0.1823 - val_accuracy: 0.9170 - val_loss: 0.2309 - learning_rate: 0.0010\n",
-      "Epoch 18/100\n",
-      "\u001b[1m100/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step - accuracy: 0.0000e+00 - loss: 0.0000e+00 - learning_rate: 0.0010\n",
-      "Epoch 19/100\n",
-      "\u001b[1m 81/100\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━\u001b[0m \u001b[1m19s\u001b[0m 1s/step - accuracy: 0.9226 - loss: 0.1788 "
+      "\u001b[1m 11/100\u001b[0m \u001b[32m━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m1:15\u001b[0m 851ms/step - accuracy: 0.9342 - loss: 0.1970"
      ]
     }
    ],
    "source": [
+    "class DebugCallback(tf.keras.callbacks.Callback): \n",
+    "    def on_epoch_end(self, epoch, logs=None): \n",
+    "        print(f\"Epoch {epoch+1} ended with accuracy: {logs['accuracy']}, loss: {logs['loss']}\") \n",
+    "        debug_callback = DebugCallback()\n",
+    "\n",
+    "class DataCheckCallback(tf.keras.callbacks.Callback): \n",
+    "    def on_batch_end(self, batch, logs=None): \n",
+    "        if logs.get('accuracy') == 0.0 and logs.get('loss') == 0.0: \n",
+    "            print(f\"Batch {batch} might have an issue with data loading.\")\n",
+    "\n",
+    "debug_callback = DebugCallback()\n",
+    "data_check_callback = DataCheckCallback()\n",
+    "\n",
     "history = model.fit(\n",
     "    train_generator,\n",
-    "    steps_per_epoch=math.ceil(len(train_generator.filepaths) / train_generator.batch_size),\n",
-    "    epochs=100,\n",
     "    validation_data=validation_generator,\n",
+    "    batch_size=32,\n",
+    "    epochs=100,\n",
     "    validation_steps=validation_steps,\n",
-    "    callbacks=[checkpoint_cb, earlystop_cb, reduce_lr]  # Add your callbacks here if you have them\n",
-    ")\n"
+    "    callbacks=[checkpoint_cb, earlystop_cb, reduce_lr, debug_callback,data_check_callback]\n",
+    ")"
    ]
   },
   {
